@@ -2010,7 +2010,7 @@ SCIP_DECL_PRESOLEXEC(presolExecDomcol)
    if( SCIPisStopped(scip) || SCIPgetNActivePricers(scip) > 0 )
       return SCIP_OKAY;
 
-   if( !SCIPallowDualReds(scip) )
+   if( !SCIPallowStrongDualReds(scip) )
       return SCIP_OKAY;
 
    presoldata = SCIPpresolGetData(presol);
