@@ -503,7 +503,7 @@ SCIP_DECL_PRESOLEXEC(presolExecDualagg)
    if( SCIPgetNBinVars(scip) == 0 )
       return SCIP_OKAY;
 
-   if( !SCIPallowDualReds(scip) )
+   if( !SCIPallowStrongDualReds(scip) )
       return SCIP_OKAY;
 
    *result = SCIP_DIDNOTFIND;
