@@ -535,7 +535,7 @@ SCIP_DECL_PRESOLEXEC(presolExecDualcomp)
    if( SCIPgetNContVars(scip) == 0 )
       return SCIP_OKAY;
 
-   if( !SCIPallowDualReds(scip) )
+   if( !SCIPallowStrongDualReds(scip) )
       return SCIP_OKAY;
 
    *result = SCIP_DIDNOTFIND;
